// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders correctly when finished loading 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-elevation1-7 MuiPaper-rounded-5 MuiCard-root-3 Item-card-1 test card className"
>
  <div
    className="MuiCardContent-root-31"
  >
    <p
      className="MuiTypography-root-32 MuiTypography-h6-49 MuiTypography-paragraph-60"
    >
      TestTitle
    </p>
    <img
      className="MuiCardMedia-root-68 MuiCardMedia-media-69 Item-media-2 test media className"
      src="TestImageUrl"
      title="Test alt"
    />
    <Buttons
      onChange={[MockFunction]}
      reaction=""
    />
  </div>
</div>
`;

exports[`Item renders correctly when loading 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-elevation1-7 MuiPaper-rounded-5 MuiCard-root-3 Item-card-1 test card className"
>
  <div
    className="MuiCardContent-root-31"
  >
    <Loader />
  </div>
</div>
`;

exports[`Item renders correctly when marked funny 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-elevation1-7 MuiPaper-rounded-5 MuiCard-root-3 Item-card-1 test card className"
>
  <div
    className="MuiCardContent-root-31"
  >
    <p
      className="MuiTypography-root-32 MuiTypography-h6-49 MuiTypography-paragraph-60"
    >
      TestTitle
    </p>
    <img
      className="MuiCardMedia-root-68 MuiCardMedia-media-69 Item-media-2 test media className"
      src="TestImageUrl"
      title="Test alt"
    />
    <Buttons
      onChange={[MockFunction]}
      reaction="funny"
    />
  </div>
</div>
`;

exports[`Item renders correctly when marked not funny 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-elevation1-7 MuiPaper-rounded-5 MuiCard-root-3 Item-card-1 test card className"
>
  <div
    className="MuiCardContent-root-31"
  >
    <p
      className="MuiTypography-root-32 MuiTypography-h6-49 MuiTypography-paragraph-60"
    >
      TestTitle
    </p>
    <img
      className="MuiCardMedia-root-68 MuiCardMedia-media-69 Item-media-2 test media className"
      src="TestImageUrl"
      title="Test alt"
    />
    <Buttons
      onChange={[MockFunction]}
      reaction="meh"
    />
  </div>
</div>
`;
